# AgroBot

./: .gitignore  README.md  Untitled Diagram.drawio  plotjuggler.xml
agrobot_bringup/: CMakeLists.txt  package.xml
agrobot_bringup/config/: object_tracking_params.yaml
agrobot_bringup/launch/: actuator_control_launch.py  base_launch.py  description_launch.py  robot_bringup_launch.py  uros_agents_launch.py  vision_tracking_launch.py
agrobot_controller/: CMakeLists.txt  package.xml
agrobot_controller/agrobot_controller/: wheel_speed_control.py  x_drive_controller_py.py
agrobot_controller/config/: agrobot_controller_params.yaml
agrobot_controller/launch/: agrobot_controller_launch.py
agrobot_controller/src/: x_drive_controller_cpp.cpp
agrobot_demos/: CMakeLists.txt  package.xml
agrobot_demos/agrobot_demos/: cotton_plucking.py
agrobot_demos/config/: cotton_plucking_demo.yaml
agrobot_demos/launch/: cotton_plucking_demo_launch.py
agrobot_demos/src/: cotton_plucking.cpp
agrobot_firmware/: platformio.ini
agrobot_firmware/extra_packages/agrobot_interfaces/: CMakeLists.txt  package.xml
agrobot_firmware/extra_packages/agrobot_interfaces/msg/: EncoderPulses.msg
agrobot_firmware/include/: motor_driver.hpp  motor_driver_mcpwm.hpp  pin_map.hpp
agrobot_firmware/src/: main.cpp
agrobot_firmware_s3/: platformio.ini
agrobot_firmware_s3/extra_packages/agrobot_interfaces/: CMakeLists.txt  package.xml
agrobot_firmware_s3/extra_packages/agrobot_interfaces/msg/: MotorPWMs.msg  SensorDatas.msg
agrobot_firmware_s3/include/: cobra_line_sensor.hpp  mcpwm_servo.hpp  pin_map.hpp  sharp_ir_driver.hpp  ultrasonic_sensor.hpp
agrobot_firmware_s3/src/: main.cpp
agrobot_firmware_s3/test/: cobra_line_sensor_test.cpp  limit_switch-txt  servo_motor_test.cpp  servo_test.txt  ultrasonic_test.cpp  ultrasonic_test.txt  working.txt
agrobot_hardware/: CMakeLists.txt  package.xml
agrobot_hardware/agrobot_hardware/: imu_driver.py  lift_motor_control.py  servo_control.py
agrobot_hardware/config/: agrobot_hardware_params.yaml  lidar.yaml
agrobot_hardware/launch/: agrobot_hardware_launch.py  lidar_launch.py
agrobot_hardware/src/: servo_control.cpp
agrobot_interfaces/: CMakeLists.txt  README.md
agrobot_interfaces/msg/: LimitSwitchStates.msg  PIDWheelError.msg  ServoAngles.msg  WheelAngularVel.msg
agrobot_localization/: CMakeLists.txt  package.xml
agrobot_localization/config/: cartographer.lua  ekf.yaml
agrobot_localization/launch/: cartographer_launch.py  ekf_launch.py
agrobot_navigation/: CMakeLists.txt  package.xml
agrobot_navigation/config/: params.yaml
agrobot_navigation/launch/: nav2_bringup.launch.py  navigation_launch.py  navigation_modules.launch.py
agrobot_teleop/: CMakeLists.txt  package.xml
agrobot_teleop/agrobot_teleop/: joy_control.py
agrobot_teleop/config/: joystick_params.yaml  twist_mux.yaml
agrobot_teleop/launch/: joystick.launch.py
agrobot_teleop/src/: joy_control.cpp
agrobot_vision/: CMakeLists.txt  package.xml
agrobot_vision/agrobot_vision/: click_photos.py  compressed_image_viewer.py  model_test.py  model_train.ipynb  object_tracking.py  yolo_results.py  yolo_test.py
agrobot_vision/config/: agrobot_vision_params.yaml
agrobot_vision/launch/: agrobot_vision_launch.py
agrobot_vision/src/: yolo_results.cpp
